# JHEK675.github.io

./: .env.example  .pre-commit-config.yaml  DEPLOYMENT.md  Dockerfile  Makefile  README.md  docker-compose.yml  index.html  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
src/: __init__.py  config.py  main.py
src/control_panel/: __init__.py  api.py  schemas.py  websocket.py
src/proxy/: __init__.py  connection.py  minecraft.py  server.py
tests/: __init__.py  test_control_panel.py  test_proxy.py
